# xlsx-handlebars

./: .gitignore  Cargo.toml  README.md  README_CN.md  README_zh.md  package.json
examples/: deno_example.ts  node_example.js  rust_example.rs  template.xlsx  utils_example.js
pkg-jsr/: README.md  deno.json  jsr.json  mod.ts  types.d.ts  xlsx_handlebars.d.ts  xlsx_handlebars.js  xlsx_handlebars_bg.wasm  xlsx_handlebars_bg.wasm.d.ts
pkg-npm/: LICENSE-MIT  package.json  xlsx_handlebars.js  xlsx_handlebars_bg.wasm  xlsx_handlebars_bg.wasm.d.ts
src/: errors.rs  imagesize.rs  lib.rs  template.rs  utils.rs
tests/: README.md
tests/jsr_test/: deno.json  test.ts
tests/npm_test/: browser_test_npm.html  package-lock.json  package.json  server.js  test.mjs
tools/: build.js  update_version.js
