[package]
name = "xlsx-handlebars"
version = "0.1.3"
edition = "2024"
authors = ["sail-sail <151263555@qq.com>"]
description = "A Rust library for processing XLSX files with Handlebars templates, supporting WASM, Node.js, Deno, and browsers"
license = "MIT"
repository = "https://github.com/sail-sail/xlsx-handlebars"
homepage = "https://github.com/sail-sail/xlsx-handlebars"
documentation = "https://docs.rs/xlsx-handlebars"
keywords = ["xlsx", "handlebars", "template", "wasm", "office"]
categories = ["template-engine", "text-processing", "wasm"]
readme = "README.md"
exclude = [
    # 构建产物和 WASM 包
    "pkg-npm/",
    "pkg-jsr/",
    "target/",
    
    # 测试目录和文件
    "tests/jsr_test/",
    "tests/npm_test/",
    "examples/*.xlsx",
    "**/*.xlsx",
    
    # 构建脚本和配置文件
    "build.bat",
    "build.sh", 
    "Makefile",
    "deno.json",
    "jsr.json",
    "package.json",
    "mod.ts",
    "types.d.ts",
    
    # Python 调试工具
    "tools/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
handlebars = "6.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "js"] }
base64 = "0.22.1"
# regex = "1.11.1"
quick-xml = "0.38.3"

# WASM dependencies
wasm-bindgen = "0.2.104"
js-sys = "0.3.81"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Web API dependencies
web-sys = { version = "0.3.81", features = [
  "console",
  "File",
  "FileReader",
  "Blob",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[features]
default = []  # 生产环境默认不包含 panic hook
dev = ["console_error_panic_hook"]  # 开发时才启用

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
